--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   db:
     image: postgres:12.4-alpine
-    container_name: todolist_postgres
+    container_name: todolist
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
