--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,3 +45,12 @@ jobs:
           script: |
             cd skylist
             echo ${{ secrets.PASSWORD }} | sudo -S docker-compose up -d
+      - name: Cleanup after deploy
+        if: always()
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          script: |
+            docker system prune -f
