--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -3,7 +3,7 @@ services:
   front:
     image: sermalenk/skypro-front:lesson-34
     ports:
-      - "8080:80"
+      - "80:80"
     depends_on:
       - api
   api:
@@ -30,7 +30,7 @@ services:
       POSTGRES_DB: $DB_NAME
       POSTGRES_USER: $DB_USER
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      test: [ "CMD-SHELL", "pg_isready -U td_user -d todolist" ]
       interval: 5s
       timeout: 5s
       retries: 5
