--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   front:
     image: sermalenk/skypro-front:lesson-34
     ports:
-      - "8080:80"
+      - "80:80"
     depends_on:
       - api
   api:
@@ -29,10 +29,12 @@ services:
   postgres:
     image: postgres:latest
     environment:
+      POSTGRES_USER: td_user
       POSTGRES_PASSWORD: td_paSS81
       POSTGRES_DB: todolist
+      POSTGRES_INITDB_ARGS: "-A md5"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U td_user -d todolist" ]
       interval: 5s
       timeout: 5s
       retries: 5
