Step #2. Fix healthcheck, add cleanup after deploy

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -53,4 +53,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           script: |
-            docker system prune -f
+            sudo docker system prune -a -f
