--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -53,4 +53,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           script: |
-            sudo docker system prune -a -f
+            echo ${{ secrets.PASSWORD }} | sudo -S docker system prune -a -f
