--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Django~=4.0.1
+Django==4.0.1
 python-dotenv==0.20.0
 django-environ==0.9.0
 psycopg2-binary==2.9.3
 djangorestframework==3.13.1
+social-auth-app-django==5.0.0
+requests==2.9.1
 asgiref==3.5.2
 sqlparse==0.4.2
 tzdata==2022.1
-social-auth-app-django==5.0.0
-
+drf-yasg==1.20.0
