--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -7,7 +7,7 @@ services:
     depends_on:
       - api
   api:
-    image: mnpetruk/skylist:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+    image: mnpetruk/sky_todolist:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     depends_on:
       postgres:
         condition: service_healthy
@@ -16,7 +16,7 @@ services:
     volumes:
       - ./.env:/app/.env
   migrations:
-    image: mnpetruk/skylist:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+    image: mnpetruk/sky_todolist:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     depends_on:
       postgres:
         condition: service_healthy
