--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,4 +37,4 @@ services:
       timeout: 5s
       retries: 5
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
