--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -35,6 +35,6 @@ services:
       timeout: 5s
       retries: 5
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
 volumes:
   postgres_data:
