--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,7 @@ requests==2.9.1
 drf-yasg==1.21.3
 urllib3==1.26.10
 django-filter==22.1
+marshmallow==3.17.0
+marshmallow-dataclass==8.5.8
+requests==2.28.1
 
