Step #6. Fix env

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DATABASE_URL=psql://td_user:td_paSS81@127.0.0.1:5432/todolist
 SECRET_KEY="pw6z@e8e21iwii%m3&5"
 SOCIAL_AUTH_VK_OAUTH2_KEY=
 SOCIAL_AUTH_VK_OAUTH2_SECRET=
-BOT_TOKEN=5472832075:AAFzc9RiBKzKYQd5LQqBrfLkvDClM7ZqIwc
+BOT_TOKEN=
